--- a/FA1.html
+++ b/FA1.html
@@ -90,6 +90,6 @@
         <button type = "button"> Send </button> 
         
     </form>
-    <H1><b><a href = "index.html"> Press me to go Back! </a></b></H3>
+    <h1><b><a href = "index.html"> Press me to go Back! </a></b></h1>
 </body>
 </html>
